--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 log = { version = "0.4", features = ["serde"] }
+buddy_system_allocator = "0.6"
+bitflags = "1.2.1"
+xmas-elf = "0.7.0"
+spin = "0.7.0"
