--- a/os/Makefile
+++ b/os/Makefile
@@ -53,15 +53,24 @@ run: run-inner
 run-inner: build
 	@qemu-system-riscv64 \
 		-machine virt \
-		-smp 1\
+		-smp 4\
 		-nographic \
 		-bios $(BOOTLOADER) \
 		-device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA)
 
 debug: build
-	@tmux new-session -d \
-		"qemu-system-riscv64 -machine virt -nographic -bios $(BOOTLOADER) -device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA) -s -S" && \
-		tmux split-window -h "riscv64-unknown-elf-gdb -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'" && \
-		tmux -2 attach-session -d
+	@qemu-system-riscv64 \
+		-machine virt \
+		-smp 2\
+		-nographic \
+		-bios $(BOOTLOADER) \
+		-device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA) \
+		-s -S
+
+gdb:
+	@./riscv64-unknown-elf-gdb \
+		-ex 'file target/riscv64gc-unknown-none-elf/release/core' \
+		-ex 'set arch riscv:rv64' \
+		-ex 'target remote localhost:1234'
 
 .PHONY: build env kernel clean disasm disasm-vim run-inner
